--- a/payroll/calculate/payment/indianact.html
+++ b/payroll/calculate/payment/indianact.html
@@ -700,8 +700,10 @@
 
 </li>
 <li>
-<h3 id="h_5">Withhold payroll deductions and remit GST/HST</h3>
+<h3 id="h_5">Withhold and report the payment on the slip</h3>
 <p class="mrgn-bttm-lg">The withholding and remitting requirement depends on the type of remuneration: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>.</p>
+
+<p>You must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
 
 <ol class="lst-stps-sub">
 <li><details><summary><strong>Exempt</strong> income situation</summary>	
@@ -788,12 +790,6 @@
 </ol>
 </li>
 
-<li>
-<h3 id="h_6">Report the employment income on a slip</h3>
-
-<p>Learn more on how to report amounts on a T4 slip when you pay tax-exempt or partly tax-exempt employment income to your employee: <a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </p>
-
-</li>
 </ol>		 
 		 
 <h2 id="h_7">References</h2>
@@ -801,13 +797,8 @@
 <h3 id="h_7_1">Related</h3>
 <ul>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income </li>
+<li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t90.html">T90</a>, Income Exempt From Tax Under the Indian Act</li>
 <li>Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>, Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Ac </li>
-<li><a href="/cra-arc/payroll/file/t4slip.html#indian1">How to report income paid for Indian employees - T4 slip - Information for employers</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/indian-workers-canada-pension-plan.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cpp-ei-explained-indigenous">Indian workers and the Canada Pension Plan &ndash; CPP/EI explained</a> </li>
-<li><a href="https://www.sac-isc.gc.ca/eng/1100100032374/1572457769548">Indian status &ndash; Indigenous Services Canada</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_taxes-guidelines-indigenous">Indian Act Exemption for Employment Income Guidelines</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/campaigns/covid-19-update/guidance-application-indian-act-exemption.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_tax-guidelines-indigenous-covid19">Indigenous income tax issues &ndash; CRA and COVID</a> </li>
 </ul>
 
 
