--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -261,7 +261,7 @@
 
 <p><span class="fa fa-balance-scale fa-lg text-muted"></span> We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we sometimes use the term “Indian” because it has a legal meaning in the Indian Act. The term “First Nations workers” is used to describe an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a> .</p>
 
-<p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether their income is taxable or exempt. </p>
+<p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether the income is taxable or exempt.</p>
 
  <h2 class="h3">On this page</h2>
   	
@@ -290,29 +290,19 @@
 <h2>Steps</h2>
   <ol class="lst-stps stps-strpd">
   <li>             
-<h3 id="h_1">Determine the status of the employee</h3>
-<p>An Indian is defined in the Indian Act as an individual who is listed or is entitled to be listed in the Indian Register. The Indian Register is the official record identifying all Indians who are registered in Canada. Indigenous Services Canada is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
+<h3 id="h_1">Determine if the worker is registered with Indigenous Services Canada (ISC) </h3>
+<p>You must determine if the worker is registered with ISC and has a valid status card. The CRA requires proof of registration with ISC to claim the exemption from tax under section 87 of the Indian Act. </p>
 
-<details><summary>Situation: Your employee is registered as a status Indian under the Indian Act</summary>
-<p>Depending on your situation, the employment income of status Indians may be exempt from tax. It is the income that is exempt from tax and not the person. </p>
-<p>The rules for CPP and EI are different. EI premiums are always required. Income that is exempt from income tax is not pensionable employment although you or the employee may elect into the CPP.</p>
-<p>Where <strong>at least 90% of the duties of employment are performed on a reserve</strong>, all of the income of an Indian from that employment will usually be exempt from income tax. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To determine if the income is exempt from tax in this situation, continue to: <a href="#h_2">Step 2: Determine the residency of the employee or employer</a>.</p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html#1">Guideline 1</a></p>
+<p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
 
-</details>
-		 
-<details><summary>Situation: Your employee is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the Indian Act</summary>
-<p>The <strong>employment income is taxable</strong> if your employee is a treaty beneficiary of a First Nation with a final or <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100032275/1529354547314">self-government</a> agreement that ends the tax exemption under section 87 of the Indian Act.</p>
-<p>Even if your employee has Indian status, you need to deduct CPP, EI and income tax in this situation, the same as for your other employees.</p>
+<p>Learn more from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032424/1572461852643">Is the status card valid</a>  </p> 
+<br>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-address-information/indigenous-government-lands.html">Determine whether you live on Indigenous government lands</a></p>
-</details>
-
-<details><summary>Situation: Your employee is not registered as a status Indian under the Indian Act</summary>
-<p>The <strong>employment income is taxable</strong> if your employee is not registered as a status Indian under the Indian Act. The section 87 exemption <strong>only applies to an Indian as defined by the Indian Act</strong>.</p>
-<p>You need to deduct CPP, EI and income tax for this situation, the same as for your other employees.</p>
-</details>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the worker does not have a valid status card, <strong>do not</strong> continue to next step. You need to deduct CPP, EI and income tax, the same as for your other employees. The exemption under section 87 only applies to a worker who are registered or entitled to be registered under the Indian Act. </li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has a valid status card, continue to <a href="#step2">Step 2 - Determine if ???</a>.</li>
+</ul>
+	
  </li>
   <li>
 <h3 id="h_2">Determine the residency of the worker or payer</h3>
