--- a/guides/alberta/onepager-new2.html
+++ b/guides/alberta/onepager-new2.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Alberta personal income tax 2022 - Canada.ca</title>
+         <title>Alberta tax information - Personal income tax - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <!-- Meta data -->
          <!-- Meta data-->
@@ -70,7 +70,8 @@
         
             <div class="container">
 			
-               <h1 property="name" id="wb-cont" class="gc-thickline">Alberta: Personal income tax 2022</h1>
+                  <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">Personal income tax</p>
+	<h1 class="gc-thickline mrgn-tp-0">Alberta tax information</h1>
                     <p class="mrgn-tp-md">Use the information on this page to help you complete your Alberta tax and credits form. Form AB428 is completed after you have completed steps 1 to 6 of your income tax and benefit return.</p>
 			<div class="mwsbodytext text parbase section">
 
@@ -82,11 +83,12 @@
 
 <ul>
 
-<li><a href="#h-1">What's new</a></li>
+<li><a href="#h-1">New for 2022</a></li>
 
 <li><a href="#h-2">File on time to receive benefits on time</a></li>
-<li><a href="#h-3">How to file your taxes</a></li>
-<li><a href="#h-4">Get and complete the necessary forms</a></li>
+<li><a href="#h-3">Who should complete the Alberta form(s)</a></li>
+<li><a href="#h-4">Completing form AB428 </a></li>
+<li><a href="#h-4a">Completing form XX479 </a></li>
 <li><a href="#h-5">Download a copy of this content</a></li>
 
 
@@ -120,46 +122,11 @@
 
 </div>
 
-<div class="mwsbodytext text parbase section">
 
-<h2 id="h-3">How to file your taxes</h2>
+<h2 id="h-3">Who should complete the Alberta form(s)</h2>
 
-<p>The CRA offers taxpayers numerous ways to file their income taxes. Refer to the list below and select the option that best fits your needs:</p>
-
-<h3>Options</h3>
-
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-
-<li class="cnjnctn-col"><h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-laptop"></span>Using certified software<span class="wb-inv">: Option 1</span></mark></h4>
-
-<p><mark>Forms are automatically generated for you when you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></mark></p>
-
-</li>
-
-<li class="cnjnctn-col"><h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-print"></span> Using paper forms<span class="wb-inv">: Option 2</span></mark></h4>
-
-<p>You can download and print a the appropriate form</p>
-
-</li>
-
-<li class="cnjnctn-col"><h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-plus"></span> Other options<span class="wb-inv">: Option 3</span></mark></h4>
-
-<p><mark>Refer to: <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes/ways.html">Ways to do your taxes</a></mark></p>
-
-</li>
-
-</ul>
-
-</div>
-<h2 id="h-4">Get and complete the necessary forms</h2>
-<p>Most individuals will fill out Alberta-specific forms and follow the <a href="#typical">typical situation</a>. However, some individuals have a <a href="#less-common">less common situation</a> and will instead use a different form instead.</p>
-
-<div class="wb-tabs mrgn-tp-lg">
-	<div class="tabpanels">
-		<details id="details-panel1">
-			<summary>Typical situations</summary>
-				<p id="typical">If the following applies to you:</p>
-				<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm col-xs-12">
+				<p>If the following applies to you:</p>
+				<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-bttm-lg">
   <li class="cnjnctn-col-30">
     <p>You were a resident of Alberta at the end of the year</p>
   </li>
@@ -174,11 +141,6 @@
   </li>
 </ul>
 
-<p>You will use:</p>
-<ul class="fa-ul">
-<li><span class="far fa-file fa-li"></span><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html"><span class="nowrap">Form AB428</span>, Alberta Tax and Credits</a></li>
-<li><span class="far fa-file fa-li"></span><a href="#">(other form here)</a></li>
-</ul>
 
 
 <div class="mwsbodytext text parbase section">
@@ -195,7 +157,7 @@
 
 
 
-<h3>Completing Form AB428</h3>
+<h2 id="h-4">Completing Form AB428</h2>
 
 <ol class="lst-stps ld-zr">
 
@@ -635,7 +597,7 @@
 
 <div class="mwsbodytext text parbase section">
 
-<h3>Completing Form NS479</h3>
+<h2 id="h-4a">Completing Form NS479</h2>
 
 <p>You can claim these refundable tax credits even if you do not have to pay any tax. If they are more than the taxes you have to pay, you may get a refund for the difference.</p>
 
@@ -923,44 +885,10 @@
 
 </ul>
 
-</div>
-		</details>
-		<details id="details-panel2">
-			<summary>Less common situations</summary>
-			<p>If the following applies to you:</p>
-			<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm col-xs-12">
-  <li class="cnjnctn-col">
-    <p><strong>Both</strong> of the following apply:<ul class="fa-ul">
 
-<li><span class="fas fa-check text-success fa-li"></span>You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
-
-<li><span class="fas fa-check text-success fa-li"></span> All or part of <span class="nowrap">your 2022</span> business income (including income received as a retired, inactive, or limited partner) was earned and can be allocated to a permanent establishment <strong>outside</strong> Alberta</li>
-
-</ul>
-  </li>
-  <li class="cnjnctn-col">
-    <p><strong>Both</strong> of the following apply:</p><ul class="fa-ul">
-
-<li><span class="fas fa-check text-success fa-li"></span>You were a non-resident of Canada throughout 2022</li>
-
-<li><span class="fas fa-check text-success fa-li"></span> You were carrying on business in <strong>more than one</strong> province or territory in Canada or were receiving income from an office or employment that can reasonably be attributed to duties performed in <strong>more than one</strong> province or territory in Canada</li>
-
-</ul>
-
-</li>
-	</ul>
-
-			<p>You will use:</p>
-<ul>
-<li><a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a></li>
-</ul>
 		
-		</details>
-		
-	</div>
 
-	
-</div>
+
 <h2 id="h-5">Download a copy of this content</h2>
 <p>The above information is also <a href="#">available in PDF</a></p>
 <!--
