--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -259,7 +259,7 @@
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we sometimes use the term “Indian” because it has a legal meaning in the Indian Act. The term “First Nations workers” is used to describe an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a> .</p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> Many Indigenous people in Canada prefer not to describe themselves as "Indians" and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration.</p>
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether the income is taxable or exempt.</p>
 
@@ -270,23 +270,7 @@
 <li><a href="#h_7">References</a>
 </li>
 </ul>
-<p><strong>Indians </strong>who want to determine if their income is taxable should fill out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">Form TD1-IN, Determination of Exemption of an Indian's Employment Income</a>.</p>
 
-<details><summary>Terms used on this page</summary>
-<dl class="dl-horizontal">
-<dt>Employer is resident on a reserve</dt><dd>
-<p>"Employer is resident on a reserve" means that the reserve is the place where the central management and control over the employer organization is actually located.</p>
-<p>The central management and control of an organization is usually considered to be exercised by the group that performs the function of a board of directors of the organization. However, the real management and control of an organization may be exercised by some other person or group. Generally, management and control is exercised at the principal place of business but it is recognized that this function may be legitimately exercised in a place other than the principal administrative office of the organization. It is a question of fact where the central management and control is exercised.</p>
-</dd>
-<dt>Indian</dt><dd>
-"Indian" means an Indian as defined for the purposes of the Indian Act. An Indian is a person who is registered or entitled to be registered as an Indian under the Indian Act.</dd>
-<dt>Indian lives on the reserve</dt><dd>
-"Indian lives on the reserve" means the Indian lives on the reserve in a domestic establishment that is their principal place of residence and that is the centre of their daily routine.</dd>
-<dt>On a reserve</dt><dd>"On a reserve" means on a reserve as defined under the Indian Act, including all settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category I-A lands under the Cree-Naskapi (of Quebec) Act).</dd>
-<dt>Social, cultural, educational or economic development</dt><dd>
-"Social, cultural, educational or economic development" includes the provision of social services such as health care or counselling.</dd>
-</dl>
-</details>
 <h2>Steps</h2>
   <ol class="lst-stps stps-strpd">
   <li>             
@@ -699,6 +683,22 @@
 </ol>		 
 		 
 <h2 id="h_7">References</h2>
+<h3 id="h_7_3">Common terms</h3>
+<details><summary>Terms used on this page</summary>
+<dl class="dl-horizontal">
+<dt>Employer is resident on a reserve</dt><dd>
+<p>"Employer is resident on a reserve" means that the reserve is the place where the central management and control over the employer organization is actually located.</p>
+<p>The central management and control of an organization is usually considered to be exercised by the group that performs the function of a board of directors of the organization. However, the real management and control of an organization may be exercised by some other person or group. Generally, management and control is exercised at the principal place of business but it is recognized that this function may be legitimately exercised in a place other than the principal administrative office of the organization. It is a question of fact where the central management and control is exercised.</p>
+</dd>
+<dt>Indian</dt><dd>
+"Indian" means an Indian as defined for the purposes of the Indian Act. An Indian is a person who is registered or entitled to be registered as an Indian under the Indian Act.</dd>
+<dt>Indian lives on the reserve</dt><dd>
+"Indian lives on the reserve" means the Indian lives on the reserve in a domestic establishment that is their principal place of residence and that is the centre of their daily routine.</dd>
+<dt>On a reserve</dt><dd>"On a reserve" means on a reserve as defined under the Indian Act, including all settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category I-A lands under the Cree-Naskapi (of Quebec) Act).</dd>
+<dt>Social, cultural, educational or economic development</dt><dd>
+"Social, cultural, educational or economic development" includes the provision of social services such as health care or counselling.</dd>
+</dl>
+</details>
 		
 <h3 id="h_7_1">Related</h3>
 <ul>
