--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -275,21 +275,21 @@
   <ol class="lst-stps stps-strpd">
   <li>             
 <h3 id="h_1">Determine if the worker is registered with Indigenous Services Canada (ISC) </h3>
-<p>You must determine if the worker is registered with ISC and has a valid status card. The CRA requires proof of registration with ISC to claim the exemption from tax under section 87 of the Indian Act. </p>
+<p>You must determine if the worker is registered with ISC. The CRA requires proof of registration with ISC to claim the exemption from tax under section 87 of the Indian Act. </p>
 
 <p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
 
-<p>Learn more from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032424/1572461852643">Is the status card valid</a>  </p> 
+<p>Learn more on how to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </p> 
 <br>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the worker does not have a valid status card, <strong>do not</strong> continue to next step. You need to deduct CPP, EI and income tax, the same as for your other employees. The exemption under section 87 only applies to a worker who are registered or entitled to be registered under the Indian Act. </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has a valid status card, continue to <a href="#step2">Step 2 - Determine if ???</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the worker <strong>does not</strong> have proof of registration, <strong>do not</strong> continue to next step. Deduct CPP, EI and income tax in the same as for your other workers. The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has proof of registration, continue to <a href="#step2">Step 2 - Determine if ???</a>.</li>
 </ul>
 	
  </li>
   <li>
-<h3 id="h_2">Determine the residency of the worker or payer</h3>
+<h3 id="step2">Determine the residency of the worker or payer</h3>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
 <h4>Exempt income situation</h4>
