--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -280,10 +280,10 @@
 <p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
 
 <p>Learn more on how to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </p> 
-<br>
+<hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the worker <strong>does not</strong> have proof of registration, <strong>do not</strong> continue to next step. Deduct CPP, EI and income tax in the same as for your other workers. The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </li>
+<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> <p> If the worker <strong>does not</strong> have proof of registration, <strong>do not</strong> continue to next step. </p> <p> Deduct CPP, EI and income tax in the same as for your other workers. The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </p> </li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has proof of registration, continue to <a href="#step2">Step 2 - Determine if ???</a>.</li>
 </ul>
 	
