--- a/guides/alberta/chooserpage.html
+++ b/guides/alberta/chooserpage.html
@@ -256,7 +256,7 @@
  </li>
   <li class="cnjnctn-col">
    <p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a>  if:</p>
-<ul class="list-unstyled cnjnctn-type-or  brdr-0  mrgn-lft-lg">
+<ul class="list-unstyled cnjnctn-type-or  brdr-0s  mrgn-lft-lg">
   <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
