--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -275,7 +275,9 @@
   <ol class="lst-stps stps-strpd">
   <li>             
 <h3 id="h_1">Determine if the worker is registered with Indigenous Services Canada (ISC) </h3>
-<p>You must determine if the worker is registered with ISC. The CRA requires proof of registration with ISC to claim the exemption from tax under section 87 of the Indian Act. </p>
+<p>You must determine if the worker is registered with ISC and their effective date for registration. </p>
+
+<p>The CRA requires proof of registration with ISC. The effective date for registration means the date that the First Nations worker is eligible for the tax exemption under section 87 of the Indian Act on the income they earn on a reserve.</p>
 
 <p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
 
@@ -283,7 +285,7 @@
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> <p> If the worker <strong>does not</strong> have proof of registration, <strong>do not</strong> continue to next step. </p> <p> Deduct CPP, EI and income tax in the same as for your other workers. The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </p> </li>
+<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the worker <strong>does not</strong> have proof of registration, <strong>do not</strong> continue to next step. <p> Deduct CPP, EI and income tax in the same as for your other workers. The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </p> </li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has proof of registration, continue to <a href="#step2">Step 2 - Determine if ???</a>.</li>
 </ul>
 	
