--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -292,8 +292,9 @@
 </ul>
 	
  </li>
+
   <li>
-<h3 id="step2">Determine the residency of the worker or payer</h3>
+<h3 id="step2">Determine the residency of the worker</h3>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
 <h4>Exempt income situation</h4>
@@ -334,6 +335,9 @@
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To determine if the income is exempt or partly from tax in this situation, continue to: <a href="#h_3">Step 3: Determine the percentage of duties related to employment on a reserve</a>.</p>
 
 </details>
+</li>
+<li><h3 id="step3">Determine the residency of the payer</h3>
+<p>Info to be transfered here later, just trying to find the appropriate structure.</p>
 </li>
 <li>	  
 <h3 id="h_3">Determine the percentage of duties related to employment on a reserve</h3>
