--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -287,7 +287,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the worker <strong>does not</strong> have proof of registration, <strong>do not</strong> continue to next step.</p> 
 
-<p>You must deduct CPP, EI and income tax in the same as for your other workers. </p> 
+<p>You must deduct CPP, EI and income tax the same as regular workers. </p> 
 <p> The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </p> </li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has proof of registration, continue to <a href="#step2">Step 2 - Determine if ???</a>.</li>
 </ul>
