remove non-can.

--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -956,7 +956,7 @@ input[type='radio'] {
             <div class="col-md-8">
 
                 <p>The Underused Housing Tax is an annual <strong>federal</strong> 1% tax on the ownership of vacant or underused housing in Canada that took effect on January 1, 2022.</p>
-		    <p>The tax generally applies to foreign national, non-Canadian owners of housing in Canada. However, in some situations, this tax also applies to some Canadian owners (such as certain partners, trustees, and corporations).</p>
+		    <p>The tax generally applies to foreign national owners of housing in Canada. However, in some situations, this tax also applies to some Canadian owners (such as certain partners, trustees, and corporations).</p>
 		    <details>
 <summary>Provincial and municipal vacancy taxes</summary>
 			    
