--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -869,7 +869,7 @@ margin-left: 38px;
 <details>
 	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
 	<p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
-	<p>However, some examples of records to support the exemption for vacation properties could include: </p>
+	<p>However, some examples of records to support the exemption for vacation properties could include (but are not limited to): </p>
 	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
 	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
 </details>
