--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -1001,13 +1001,21 @@ input[type='radio'] {
                 </section>
             </div>
         </div>
+ <h2>Technical information</h2>
+    <ul>
+      <li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">Underused Housing Tax notices</a></li>
+      <li><a href="https://laws-lois.justice.gc.ca/eng/acts/U-0.5/index.html" target="_blank">Underused Housing Tax Act</a></li>
+    </ul>
+
+
+	    
         <div id="def-preFooter">
         </div>
         <!-- Write closure template -->
         <script type="text/javascript">
             var defPreFooter = document.getElementById("def-preFooter");
             defPreFooter.outerHTML = wet.builder.preFooter({
-                dateModified: "June 7, 2023",
+                dateModified: "2023-08-01",
                 showPostContent: true,
                 showFeedback: true,
                 showShare: true
