--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1293,7 +1293,7 @@ html:lang(fr) .cnjnctn-or:before {
   <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "March 9, 2021",
+		dateModified: "2023-08-01",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
