--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -865,15 +865,60 @@ margin-left: 38px;
 		 <h2>Keep your records</h2>
         <p>You must keep records to support the information you provide in your return. If you claim an exemption but do not have adequate records to support it, we may <strong>disallow</strong> it.</p>
 		 <p>Generally, you must keep your records for 6 years from the end of the year they relate to. Your records must be kept in Canada, in English or French, unless otherwise authorized by the Minister.</p>
-
+<p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
+		 <p>Some examples of records to support an exemption could include, but are not limited to:</p>
 <details>
+	<summary class="mrgn-tp-md">Example - Vacation property exemption </summary>
+	
+	<ul>
+		<li>A diary of the days the residential property was used as a place of residence or lodging by you, your spouse or common-law partner, including the names of any persons who can confirm the residential property was occupied on those days</li></ul>
+	<li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that you, your spouse or common-law partner used the residential property as a place of residence or lodging for at least 28 days during the calendar year</li></ul>
+</details>
+		 
+	
+		 <details>
+	<summary class="mrgn-tp-md">Example - Primary place of residence exemption</summary>
+	
+	<ul>
+		<li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that the residential property was occupied as the primary place of residence by you, your spouse, common-law partner, child, or a child of your spouse or common-law partner</li>
+	<li>Any invoices, receipts or statements that provide evidence that your child, or a child of your spouse or common-law partner was pursuing an authorized study at a designated learning institution during the calendar year</li>
+	</ul>
+</details>
+		 <details>
 	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
-	<p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
-	<p>However, some examples of records to support the exemption for vacation properties could include (but are not limited to): </p>
+	
 	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
 	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
 </details>
+		 <details>
+	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
 	
+	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
+	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+</details>
+		 <details>
+	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
+	
+	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
+	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+</details>
+		 <details>
+	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
+	
+	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
+	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+</details>
+		 <details>
+	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
+	
+	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
+	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+</details>
+
+
+
+
+
 		 
       <!--  <nav class="mrgn-bttm-lg mrgn-tp-lg">
             <h3 class="wb-inv">Document navigation</h3>
