--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -872,7 +872,7 @@ margin-left: 38px;
 	
 	<ul>
 		<li>A diary of the days the residential property was used as a place of residence or lodging by you, your spouse or common-law partner, including the names of any persons who can confirm the residential property was occupied on those days</li></ul>
-	<li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that you, your spouse or common-law partner used the residential property as a place of residence or lodging for at least 28 days during the calendar year</li></ul>
+	<ul><li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that you, your spouse or common-law partner used the residential property as a place of residence or lodging for at least 28 days during the calendar year</li></ul>
 </details>
 		 
 	
