--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -871,8 +871,10 @@ margin-left: 38px;
 	<summary class="mrgn-tp-md">Example - Vacation property exemption </summary>
 	
 	<ul>
-		<li>A diary of the days the residential property was used as a place of residence or lodging by you, your spouse or common-law partner, including the names of any persons who can confirm the residential property was occupied on those days</li></ul>
-	<ul><li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that you, your spouse or common-law partner used the residential property as a place of residence or lodging for at least 28 days during the calendar year</li></ul>
+		<li>A diary of the days the residential property was used as a place of residence or lodging by you, your spouse or common-law partner, including the names of any persons who can confirm the residential property was occupied on those days</li>
+	<li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that you, your spouse or common-law partner used the residential property as a place of residence or lodging for at least 28 days during the calendar year</li>
+<li>Any invoices, receipts or statements for transportation, that provide evidence that you, your spouse or common-law partner travelled to and from the residential property during the calendar year</li>
+</ul>
 </details>
 		 
 	
