--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -887,36 +887,30 @@ margin-left: 38px;
 	</ul>
 </details>
 		 <details>
-	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
+	<summary class="mrgn-tp-md">Example - Qualifying occupancy exemption</summary>
 	
-	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
-	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+	<ul><li>Lease agreement or other agreement evidenced in writing used for the residential property to support one or more qualifying occupancy periods totalling at least 180 days in the calendar year</li></ul>
+	<ul><li>Any invoices, receipts or statements, that provide evidence that the residential property was rented during the calendar year, including the name(s) of the persons who occupied the residential property during the calendar year</li></ul>
 </details>
 		 <details>
-	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
+	<summary class="mrgn-tp-md">Example - Specified Canadian corporation exemption</summary>
 	
-	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
-	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+	<ul><li>Articles of incorporation, share registry showing the names and addresses of all shareholders</li></ul>
+	<ul><li>Copy of land registration records that provide evidence of the ownership of the residential property by a specified Canadian corporation</li></ul>
 </details>
 		 <details>
-	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
+	<summary class="mrgn-tp-md">Example - Specified Canadian partnership/trust exemption</summary>
 	
-	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
-	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+	<ul><li>Trust agreement, copy of land registration records that provide evidence that the residential property is owned by a trustee of a trust that is a specified Canadian trust</li></ul>
+	<ul><li>Partnership agreement, copy of land registration records that provide evidence that the residential property is owned by a partner of a partnership that is a specified Canadian partnership</li></ul>
 </details>
 		 <details>
-	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
+	<summary class="mrgn-tp-md">Example - Uninhabitable due to renovations exemption</summary>
 	
-	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
-	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
+	<ul><li>A diary of the days the owner occupied a different residential property, including the names of any persons who can confirm the owner occupied the other residential property on those days</li></ul>
+	<ul><li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that the residential property was under renovation for at least 120 consecutive days in the calendar year</li></ul>
 </details>
-		 <details>
-	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
 	
-	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
-	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
-</details>
-
 
 
 
