--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -910,8 +910,8 @@ margin-left: 38px;
 	<ul><li>A diary of the days the owner occupied a different residential property, including the names of any persons who can confirm the owner occupied the other residential property on those days</li></ul>
 	<ul><li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that the residential property was under renovation for at least 120 consecutive days in the calendar year</li></ul>
 </details>
-	
-<p>Read more detailed information about <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records/what-records-who-keep-them.html">keeping records</a>./p>
+	<br>
+<p>Read more detailed information about <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records/what-records-who-keep-them.html">keeping records</a>.</p>
 
 
 
