--- a/guides/alberta/chooserpage.html
+++ b/guides/alberta/chooserpage.html
@@ -256,14 +256,14 @@
  </li>
   <li class="cnjnctn-col">
    <p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a>  if:</p>
-<ul class="list-unstyled cnjnctn-type-or  brdr-0s  mrgn-lft-lg">
-  <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
+<ul class="list-unstyled">
+  <li> <strong>Situation 1 - Both</strong> of the following apply:
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
 <li><span class="fas fa-check text-success fa-li"></span> All or part of <span class="nowrap">your 2022</span> business income (including income received as a retired, inactive, or limited partner) was earned and can be allocated to a permanent establishment <strong>outside</strong> Alberta</li>
 </ul>
 </li>
- <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
+ <li><strong>Situation 2 - Both</strong> of the following apply:
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You were a non-resident of Canada throughout 2022</li>
 <li><span class="fas fa-check text-success fa-li"></span> You were carrying on business in <strong>more than one</strong> province or territory in Canada or were receiving income from an office or employment that can reasonably be attributed to duties performed in <strong>more than one</strong> province or territory in Canada</li>
