--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -801,9 +801,10 @@ html:lang(fr) .cnjnctn-or:before {
     <br>
     <p>If you are an <strong>affected owner</strong>, you must also pay the tax for each residential property you own, unless you qualify for an exemption.</p>
     <p>To claim an exemption, you must select the exemption on your return. If your ownership qualifies for an exemption, you will not have to pay the tax.</p>
-    <p>If you are one of several affected owners of the residential property, <strong>each</strong> of you must file a separate return for the property, even if your respective ownership qualifies for an exemption.</p>
-    <p> As an affected owner, even if your ownership qualifies for an exemption, you <strong>must still file an annual return</strong>.</p>
-    <p>If you are not an affected owner, you are an <strong>excluded owner</strong>. Excluded owners do not have to file a return or pay the tax. </p>
+    <p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
+	  <p>If you are one of several affected owners of a residential property, <strong>each of you</strong> must file a separate return for the property.</p>
+    <p>You <strong>must still file</strong> an annual return even if your ownership of the residential property qualifies for an exemption and you do not owe any tax.</p>  
+		  <p>If you are not an affected owner, you are an <strong>excluded owner</strong>. Excluded owners do not have to file a return or pay the tax. </p>
     <h2 id="determine">Determine if you are an affected owner or an excluded owner</h2>
     <p>Find out which type of owner you are based on your situation, and if you may qualify for an exemption from paying the tax.</p>
     <div class="wb-tabs mrgn-tp-lg">
