do not qualify - blurb

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1116,6 +1116,7 @@ html:lang(fr) .cnjnctn-or:before {
             <div class="alert alert-info"> 
               <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                 You do not qualify for an exemption</h4>
+		    <p>You must pay the Underused Housing Tax.</p>
             </div>
           </div>
         </details>
