--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -1001,12 +1001,16 @@ input[type='radio'] {
                 </section>
             </div>
         </div>
- <h2>Technical information</h2>
-    <ul>
-      <li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">Underused Housing Tax notices</a></li>
-      <li><a href="https://laws-lois.justice.gc.ca/eng/acts/U-0.5/index.html" target="_blank">Underused Housing Tax Act</a></li>
-    </ul>
 
+
+<aside id="gcnav-side">
+            <h2 class="h5 mrgn-tp-lg">Technical information</h2>
+            <ul>
+                 <li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">Underused Housing Tax notices</a></li>
+    
+            <li><a href="https://laws-lois.justice.gc.ca/eng/acts/U-0.5/index.html" target="_blank">Underused Housing Tax Act</a></li>
+            </ul>
+        </aside>
 
 	    
         <div id="def-preFooter">
