add 'does it' to question

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -975,7 +975,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
-                      <p class="wb-fieldflow-label"><span id="labelledby2a" aria-labelledby="labelledby2a labelledby2b labelledby2c">Is the residential property used as a primary place of residence, or meet the criteria of qualifying occupancy?</span></p>
+                      <p class="wb-fieldflow-label"><span id="labelledby2a" aria-labelledby="labelledby2a labelledby2b labelledby2c">Is the residential property used as a primary place of residence, or does it meet the criteria of qualifying occupancy?</span></p>
 		
                       <div data-ajax-replace=" #exp-4-2" class="gc-font-2019" id="labelledby2b"></div>
 			<details id="labelledby2c">
