--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -602,9 +602,18 @@
 <h3 id="h_5">Withhold and report the payment on the slip</h3>
 <p class="mrgn-bttm-lg">The withholding and remitting requirement depends on the type of remuneration: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 
-<p>You must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
+<p>You must withhold the deductions and report on a slip depending on the <strong>type of worker</strong>:</p>
 
 <ol class="lst-stps-sub">
+<li><h4>Worker is an employee</h4>
+
+  </li> 
+
+<li><h4>Worker is self-employed</h4>
+
+  </li> 
+</ol> 
+
 <li><details><summary><strong>Exempt</strong> income situation</summary>	
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -686,7 +695,7 @@
 <p><span class="fas fa-calculator fa-xl text-muted"></span> Learn more on how to <strong>calculate deductions</strong> and the <strong>GST/HST to remit</strong> on benefits: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
 
 </details></li>
-</ol>
+
 </li>
 
 </ol>		 
