--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -1834,7 +1834,7 @@
 				   
 
 				<li>Deduction for living in a prescribed zone</li>
-				<li>Deduction amount a tax services office has authorized</li>
+				<li>Deduction amount a tax services office has authorized (<a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/increase-reduce-income-tax-deducted-source.html#h-2">letter of authority</a>)</li>
 				<li>Total expenses reported on form TD1X if applicable if the employee is paid by commission</li>
 				<li>Employee’s contributions to a registered pension plan (RPP)</li>
 				<li>Union dues</li>
