--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -1836,11 +1836,11 @@
 				<li>Deduction for living in a prescribed zone</li>
 				<li>Deduction amount a tax services office has authorized (<a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/increase-reduce-income-tax-deducted-source.html#h-2">letter of authority</a>)</li>
 				<li>Total expenses reported on form TD1X if applicable if the employee is paid by commission</li>
-				<li>Employee’s contributions to a registered pension plan (RPP)</li>
+				<li>Employee’s <a href="/cra-arc/payroll/calculate/benefit/retirement.html">contributions to a registered pension plan (RPP)</a></li>
 				<li>Union dues</li>
-				<li>Employee’s contributions to a retirement compensation arrangement (RCA) or certain pension plans</li>
-				<li>Employee’s and employer’s contributions (deducted at source) to a registered retirement savings plan (RRSP) provided you have reasonable grounds to believe the employee can deduct the contribution for the year</li>
-				<li>Employee contributions to a pooled registered pension plan (PRPP), or a similar provincial pension plan, as long as the plan is registered with the Minister of National Revenue and you have reasonable grounds to believe the employee can deduct the contribution for the year</li>
+				<li>Employee’s <a href="/cra-arc/payroll/calculate/benefit/retirement.html">contributions to a retirement compensation arrangement (RCA)</a> a or certain pension plans</li>
+				<li>Employee’s and employer’s <a href="/cra-arc/payroll/calculate/benefit/retirement.html">contributions (deducted at source) to a registered retirement savings plan (RRSP)</a> provided you have reasonable grounds to believe the employee can deduct the contribution for the year</li>
+				<li>Employee <a href="/cra-arc/payroll/calculate/benefit/retirement.html">contributions to a pooled registered pension plan (PRPP)</a>, or a similar provincial pension plan, as long as the plan is registered with the Minister of National Revenue and you have reasonable grounds to believe the employee can deduct the contribution for the year</li>
 				<li><span class="label label-warning">Beginning January 1, 2023</span> First and second additional contributions to the CPP made by the employee</li>
 				<li><span class="label label-warning">Beginning April 1, 2023</span> Employee’s and employer’s contributions (deducted at source) to a First Home Savings Account (FHSA) and you have reasonable grounds to believe the employee can deduct the contribution for the year </li>
 				
