--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -1863,7 +1863,7 @@
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> $34,160 ($33,280 ($640 X 52 pay periods) + $880 ($20 X 44 pay periods)) is Joseph's total remuneration for the year before the pay increase </span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> $34,080 ($33,280 ($640 X 52 pay periods) + $800 ($20 X 40 pay periods)) is Joseph's total remuneration for the year before the retroactive pay increase </span> 
                               </li>
                          
                    <li>
@@ -1899,7 +1899,7 @@
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $34,400 is Joseph's total remuneration
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $34,118.20 is Joseph's total remuneration
                                  </span></span> 
                               </li></ul>
 </details>
